Modificamos el titulo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Supermercado+One&display=swap"
         rel="stylesheet">
     <link rel="stylesheet"  href="style/sass.css">
-    <title>Tienda adidas</title>
+    <title>Tienda adidas e-commerce</title>
 </head>
 <body>
     <header class="header">   <!--header-->
