--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p class="product__text">$1,000.00</p> <!--products p-->
             </article>
             <article class="article__products">
-                <img class="product__image" src="img/chamarra.png" alt="Chamarra adidas de hombre">
+                <img class="product__image" src="img/chamarraa.jpg" alt="Chamarra adidas de hombre">
                 <h3 class="product__title">Chamarra adidas</h3>
                 <p class="product__text">$2,000.00</p>
             </article>
@@ -42,7 +42,7 @@
                 <p class="product__text">$2,300.00</p>
             </article>
             <article class="article__products">
-                <img class="product__image" src="img/jersey.jpg" alt="Jersey de Mexico">
+                <img class="product__image" src="img/jersey-adidas.jpg" alt="Jersey de Mexico">
                     <h3 class="product__title">Jersey Mexico 2023</h3>
                     <p class="product__text">$1,000.00</p>
             </article>
